@@ -15,6 +15,9 @@
     Language.pod remained in that file, with the other files comprising
     about 25%; the other files then showed most of the subsequent growth.
 
+    * Muldis D now has 2 representation formats (Concrete, Abstract) rather
+    than 3 (relations, ASTs, strings).
+
 2007-06-29   Darren Duncan <perl@DarrenDuncan.net>
 
     * Muldis::DB version 0.0.1 for Perl 5 is released on CPAN as
